--- a/projects/01_fyyur/starter_code/templates/pages/venues.html
+++ b/projects/01_fyyur/starter_code/templates/pages/venues.html
@@ -2,6 +2,7 @@
 {% block title %}Fyyur | Venues{% endblock %}
 {% block content %}
 {% for area in areas %}
+{% if area %}
 <h3>{{ area.city }}, {{ area.state }}</h3>
 	<ul class="items">
 		{% for venue in area.venues %}
@@ -15,5 +16,8 @@
 		</li>
 		{% endfor %}
 	</ul>
+{% else %}
+<p>No Venues to display at the moment. Please check back later.</p>
+{% endif %}
 {% endfor %}
 {% endblock %}
