--- a/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form class="form" method="post" action="/artists/{{artist.id}}/edit">
+      <input type="hidden" name="csrf_token" value="{{csrf_token()}}"/>
       <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -40,7 +41,7 @@
 
       <div class="form-group">
             <label for="website_link">Website Link</label>
-            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+            {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
       </div>
 
       <div class="form-group">
