--- a/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form class="form" method="post" action="/venues/{{venue.id}}/edit">
+      <input type="hidden" name="csrf_token" value="{{csrf_token()}}"/>
       <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -44,7 +45,7 @@
 
        <div class="form-group">
               <label for="website_link">Website Link</label>
-              {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+              {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
         </div>
 
         <div class="form-group">
