--- a/projects/01_fyyur/starter_code/templates/forms/new_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/new_venue.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form" action="/venues/create">
+      <input type="hidden" name="csrf_token" value="{{csrf_token()}}"/>
       <h3 class="form-heading">List a new venue <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -35,17 +36,17 @@
       
       <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+          {{ form.facebook_link(class_ = 'form-control', placeholder='https://', autofocus = true) }}
        </div>
       
        <div class="form-group">
           <label for="image_link">Image Link</label>
-          {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+          {{ form.image_link(class_ = 'form-control', placeholder='https://', autofocus = true) }}
        </div>
 
        <div class="form-group">
             <label for="website_link">Website Link</label>
-            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+            {{ form.website(class_ = 'form-control', placeholder='https://', autofocus = true) }}
        </div>
 
        <div class="form-group">
